@@ -1,6 +1,6 @@
 {
   "name": "simp-auditd",
-  "version": "8.7.2",
+  "version": "8.7.3",
   "author": "SIMP Team",
   "summary": "A SIMP puppet module for managing auditd and audispd",
   "license": "Apache-2.0",
